--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "1.1.1",
     "react-test-renderer": "^16.3.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
