--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "1.1.1",
     "react-test-renderer": "^16.3.0",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.1",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
   },
