--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "firebase": "^4.12.1",
     "history": "^4.7.2",
+    "moment": "^2.22.0",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
