--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
+    "react-dates": "^16.4.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
